# RomaAgent

./: .env.example  .gitignore  AGENT.md  PROJECT.md  README.md  pyproject.toml  requirements.txt  roma-idea-10544986557698791241.txt  roma-idea-7235545633176829710.txt
examples/: sample_idea.txt
java-ui/: README.md  pom.xml
java-ui/src/main/java/com/roma/ui/: PipelineRunnerService.java  RomaUiApplication.java  RunRequest.java  RunResult.java  UiController.java
prompts/: platform_hexo_prompt.md  platform_zhihu_prompt.md  research_prompt.md  writer_prompt.md
python-ui/: README.md  app.py  build_exe.ps1  launcher.py  roma_agent_ui.spec
src/roma_agent/: __init__.py  cli.py  config.py  models.py  pipeline.py  providers.py  publisher.py  research.py  roman_roles.py  search.py  writer.py
