[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roma-agent"
version = "0.1.0"
description = "Idea-to-article multi-platform blogging pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "pydantic",
  "rich",
  "agent-framework",
  "requests",
  "azure-identity",
  "streamlit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
roma-agent = "roma_agent.cli:main"

